--- a/templates/diceRoll/dice-result.html
+++ b/templates/diceRoll/dice-result.html
@@ -26,8 +26,8 @@
     data.epicAttributeLabel)}}
     <div class="epic-attribute">
       <span
-        >{{localize "LABELS.EPIC_ATTRIBUTE"}} -
-        {{customLocalize data.epicAttributeLabel 'ATTRIBUTES'}}:</span
+        >{{localize "LABELS.EPIC_ATTRIBUTE"}} - {{customLocalize
+        data.epicAttributeLabel 'ATTRIBUTES'}}:</span
       >
       <span>{{data.epicAttribute}}</span>
     </div>
