--- a/styles/journals/knacks.css
+++ b/styles/journals/knacks.css
@@ -1,42 +1,17 @@
-.knack-journal-entry-content > .journal-header {
-  display: none;
-}
-
-.knack-journal-entry-content > .journal-entry-pages > .journal-entry-page {
-  margin-top: 20px;
+.knack-journal-entry-content {
   background: rgba(254, 254, 254, 255);
   border-radius: 5px;
   padding: 15px 15px;
-}
-
-.knack-journal-entry-content
-  > .journal-entry-pages
-  > .journal-entry-page:has(header.journal-page-header)
-  header.journal-page-header {
-  margin: 0 0 23px 0;
-  background-image: url(../../assets/png/band-small.png);
-  background-position: center center;
-  background-size: contain;
-  background-repeat: no-repeat;
-  min-height: 60px;
-  text-align: center;
+  margin-top: 20px;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+  width: 100%;
+  height: auto;
+  position: relative;
 }
 
-.knack-journal-entry-content
-  > .journal-entry-pages
-  > .journal-entry-page:has(header.journal-page-header)
-  header.journal-page-header
-  h1 {
-  font-family: skranji-bold, sans-serif;
-  font-size: 1.5rem;
-  margin: 0;
-  padding: 0;
-  border-bottom: none;
-  color: rgba(254, 254, 254, 255);
-  text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+.knack-journal-entry-content > .journal-header {
+  display: none;
 }
 
 .knack-wrapper-list,
