--- a/styles/journals/purview.css
+++ b/styles/journals/purview.css
@@ -42,6 +42,7 @@
   padding: 1rem 0;
   border-bottom: none;
   color: #fff;
+  text-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
 }
 
 .purviews-description,
